--- a/Front-end/oleole.css
+++ b/Front-end/oleole.css
@@ -20,7 +20,7 @@ a {
     color: #fcbd20; }
 
 hr {
-  max-width: 100px;
+  max-width: 100%;
   margin: 25px auto 0;
   border-width: 1px;
   border-color: rgba(34, 34, 34, 0.1); }
@@ -47,9 +47,86 @@ section {
   padding: 100px 0; }
   section h2 {
     font-size: 50px; }
+    /*.search-box{width:95%; margin:0 auto 40px; box-shadow:20px 20px 0 rgba(0,0,0,0.2);}*/
+.listing-block{
+  /*background:#fff;
+  height:500px;
+  padding-top:20px; */
+  /*overflow-y:scroll;*/
+  max-width: 374px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: white;
+  padding: 32px 24px 32px 24px;
+  height:536px;
+}
+
+.listing-block h3{
+  font-size: 24px;
+  color: black;
+  font-weight: 500;
+  padding-bottom: 12px;
+}
+
+.media {
+  background:#fff;
+  position:relative;
+  padding:16px 0px 16px 0px;
+  height:90px;
+  border-top: 0.25px solid #F2F2F2;
+}
+.media img{
+  width: 80px;
+  height:58px;
+}
+.media-body{
+  border:1px solid #bcbcbc;
+  border-left:0;
+}
+.media .team {
+  width: 180px;
+  height:58px;
+  padding: 12px 16px 12px 16px;
+}
+.media-title {
+  position:relative;
+  height:90px;
+  padding:42px 0px 20px 0px;
+  border-top: 0.25px solid #F2F2F2;
+}
+.media-end{
+  border-top: 0.25px solid #F2F2F2;
+  padding:32px 0px 20px 0px;
+  height: 90px;
+  position:relative;
+  align: center;
+}
+
+.media p{
+  text-align: left;
+  width:100%;
+  line-height: 14px;
+  margin-bottom: 8px;
+  font-size: 12px;
+  font-weight:300;
+  color:black;
+}
+
+.media .status {
+  width: 66px;
+  height:34px;
+  margin: 12px 0px 12px 0px;
+  padding: 8px 16px 8px 16px;
+  border-left:0.25px solid #F2F2F2;
+}
+
+.media .status p{
+  text-align: center;
+  margin-bottom: 0;
+}
 
 
-header.masthead {
+body.masthead {
   position: relative;
   width: 100%;
   height: 100%;
@@ -60,15 +137,15 @@ header.masthead {
   color: white;
   background-image: url("img/bg.jpg");
 }
-  header.masthead .header-content {
+  body.masthead .body-content {
     max-width: 500px;
     margin-bottom: 100px;
     text-align: left; }
-    header.masthead .header-content h1 {
+    body.masthead .body-content h1 {
       font-size: 50px;
       font-weight: 600;
     }
-  header.masthead .device-container {
+  body.masthead .device-container {
     max-width: 374px;
     margin-right: auto;
     margin-left: auto;
@@ -77,33 +154,36 @@ header.masthead {
     height:536px;
   }
 
-  header.masthead .device-container h3 {
+  body.masthead .device-container h3 {
     font-size: 24px;
     color: black;
     font-weight: 500;
-    padding-bottom: 14px;
+    padding-bottom: 12px;
   }
-  header.masthead .device-container hr {
-    border:0 solid #979797;
-    width:90%;
-    height:1.75px;
-    margin: 0
+
+  body.masthead .device-container hr {
+    margin-top: 0px;
+    width: 100%;
   }
-    header.masthead .device-container .screen img {
-      border-radius: 3px; }
+
+  body.masthead .device-container p {
+    font-size:14px;
+    color:#444444;
+    letter-spacing:0;
+    line-height:14px;
+    text-align:left;
+  }
+
   @media (max-width: 768px) {
-    header.masthead {
+    body.masthead {
       height: 100vh;
       min-height: 775px;
       padding-top: 0;
       padding-bottom: 0; }
-      header.masthead .header-content {
+      body.masthead .body-content {
         text-align: left; }
-        header.masthead .header-content h1 {
-          font-size: 30px; }
-      header.masthead .device-container {
-          max-width: 325px;
-        }}
+        body.masthead .body-content h1 {
+          font-size: 30px; }}
 
 footer {
   padding: 25px 0;
