--- a/Front-end/oleole.css
+++ b/Front-end/oleole.css
@@ -9,7 +9,7 @@ body {
   height: 100%; }
 
 body {
-  font-family: 'Muli', 'Helvetica', 'Arial', 'sans-serif'; }
+  font-family: 'Barlow', 'Helvetica', 'Arial', 'sans-serif'; }
 
 a {
   color: #fdcc52;
@@ -34,7 +34,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
+  font-family: 'Barlow', 'Helvetica', 'Arial', 'sans-serif';
   font-weight: 200;
   letter-spacing: 1px; }
 
@@ -49,27 +49,29 @@ section {
     font-size: 50px; }
     /*.search-box{width:95%; margin:0 auto 40px; box-shadow:20px 20px 0 rgba(0,0,0,0.2);}*/
 .listing-block{
-  /*background:#fff;
-  height:500px;
-  padding-top:20px; */
-  /*overflow-y:scroll;*/
+  overflow-y:scroll;
+  /*-webkit-scrollbar {display:none;}*/
   max-width: 374px;
   margin-right: auto;
   margin-left: auto;
   background-color: white;
   padding: 32px 24px 32px 24px;
-  height:536px;
+  max-height:540px;
+  min-height:200px;
+  height: 105%;
+}
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
 }
 
 .listing-block h3{
   font-size: 24px;
-  color: black;
   font-weight: 500;
   padding-bottom: 12px;
 }
 
 .media {
-  background:#fff;
   position:relative;
   padding:16px 0px 16px 0px;
   height:90px;
@@ -79,14 +81,10 @@ section {
   width: 80px;
   height:58px;
 }
-.media-body{
-  border:1px solid #bcbcbc;
-  border-left:0;
-}
 .media .team {
   width: 180px;
   height:58px;
-  padding: 12px 16px 12px 16px;
+  padding: 8px 16px 8px 16px;
 }
 .media-title {
   position:relative;
@@ -96,22 +94,19 @@ section {
 }
 .media-end{
   border-top: 0.25px solid #F2F2F2;
-  padding:32px 0px 20px 0px;
-  height: 90px;
+  padding:32px 0px 0px 0px;
+  height: 68px;
   position:relative;
   align: center;
 }
-
 .media p{
   text-align: left;
   width:100%;
-  line-height: 14px;
-  margin-bottom: 8px;
-  font-size: 12px;
+  line-height: 16px;
+  margin-bottom: 10px;
+  font-size: 14px;
   font-weight:300;
-  color:black;
 }
-
 .media .status {
   width: 66px;
   height:34px;
@@ -119,13 +114,10 @@ section {
   padding: 8px 16px 8px 16px;
   border-left:0.25px solid #F2F2F2;
 }
-
 .media .status p{
   text-align: center;
   margin-bottom: 0;
 }
-
-
 body.masthead {
   position: relative;
   width: 100%;
@@ -134,46 +126,22 @@ body.masthead {
   /*height: 100vh;*/
   padding-top: 6%;
   padding-bottom: 100px;
-  color: white;
-  background-image: url("img/bg.jpg");
+  color: black;
+  background: url("img/bg.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
-  body.masthead .body-content {
-    max-width: 500px;
-    margin-bottom: 100px;
-    text-align: left; }
-    body.masthead .body-content h1 {
-      font-size: 50px;
-      font-weight: 600;
-    }
-  body.masthead .device-container {
-    max-width: 374px;
-    margin-right: auto;
-    margin-left: auto;
-    background-color: white;
-    padding: 32px 24px 32px 24px;
-    height:536px;
-  }
-
-  body.masthead .device-container h3 {
-    font-size: 24px;
-    color: black;
-    font-weight: 500;
-    padding-bottom: 12px;
-  }
-
-  body.masthead .device-container hr {
-    margin-top: 0px;
-    width: 100%;
-  }
-
-  body.masthead .device-container p {
-    font-size:14px;
-    color:#444444;
-    letter-spacing:0;
-    line-height:14px;
-    text-align:left;
-  }
-
+body.masthead .body-content {
+  max-width: 500px;
+  margin-bottom: 100px;
+  color: white;
+  text-align: left; }
+body.masthead .body-content h1 {
+  font-size: 60px;
+  font-weight: 600;
+}
   @media (max-width: 768px) {
     body.masthead {
       height: 100vh;
@@ -185,6 +153,67 @@ body.masthead {
         body.masthead .body-content h1 {
           font-size: 30px; }}
 
+.onboarding-panel{
+  overflow-y:scroll;
+  max-width: 68%;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: white;
+  padding: 32px 32px 32px 32px;
+  max-height:500px;
+  min-height:200px;
+  height: 105%;
+}
+
+.onboarding-panel h3{
+  font-size: 24px;
+  color: black;
+  font-weight: 600;
+  padding-top: 6px;
+  padding-bottom:24px;
+}
+
+.media2 {
+  position:relative;
+  padding:16px 0px 16px 0px;
+  height:120px;
+  /*margin-bottom: 16px;*/
+  /*margin-top: 16px;*/
+}
+
+.media2 label{
+  font-size: 20px;
+  font-family: 'Barlow', 'Helvetica', 'Arial', 'sans-serif';
+  margin-bottom: 16px;
+}
+
+.media2 .btn{
+  padding: 8px 8px 8px 8px;
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+  border-color: #ced4da;
+}
+.media2 .btn:hover, .btn:focus, .btn:active, .btn.active {
+  color: white;
+  border-color: #ced4da;
+  background-color: #ced4da; 
+}
+.media2 img{
+  width: 100%;
+  max-width:60px;
+  max-height:60px;
+  margin-right: 8px;
+  height: 100%;
+}
+
+.media2-end {
+  position:relative;
+  padding:50px 16px 32px 16px;
+  height:100px;
+  /*margin-bottom: 16px;*/
+  /*margin-top: 16px;*/
+}
 footer {
   padding: 25px 0;
   text-align: center;
@@ -224,10 +253,18 @@ footer {
 
 .btn {
   border-radius: 300px;
-  font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
+  font-family: 'Barlow', 'Helvetica', 'Arial', 'sans-serif';
   letter-spacing: 2px;
   text-transform: uppercase; }
 
 .btn-xl {
   font-size: 10px;
-  padding: 10px 20px; }
+  font-weight: 500;
+  padding: 10px 20px;
+}
+
+.btn-lg {
+  font-size: 16px;
+  font-weight: 500;
+  padding: 10px 30px;
+}
