--- a/app/templates/sports-room.html
+++ b/app/templates/sports-room.html
@@ -73,6 +73,7 @@
     </head>
     <body>
         <h1>Flask-SocketIO-Chat: {{ room }}</h1>
+        <iframe width="420" height="315" src={{ videoURL }}></iframe>
         <textarea id="chat" contenteditable="true" cols="80" rows="20"></textarea><br><br>
         <div class="field">
           <input type="text" id="input-default" class="emojiable-option" placeholder="Default">
