--- a/app/templates/sharelink.html
+++ b/app/templates/sharelink.html
@@ -1,5 +1,5 @@
 This is your streaming link : {{url}}
-Share it with friends so that they can join the  <a href="/join-room">chat room</a>
+Share it with friends so that they can join the  <a href = "{{ url_for('.joinRoom') }}">chat room</a>
 </br>
 <form method="POST" action="/chat">
     {{ form.hidden_tag() }}
