--- a/app/templates/y-sharelink.html
+++ b/app/templates/y-sharelink.html
@@ -45,7 +45,7 @@
       <div class="col-lg-12 my-auto onboarding-panel rounded">
           <h3>INVITE YOUR FRIENDS</h3>
           <div class="media2" style="margin-top: 60px">
-            <label for="streamLink">Share this room code with whoever you want to watch the match with</label>
+            <label for="streamLink">Share this room link with your friends</label>
             <div class="input-group input-group-lg">
               <input type="text" class="form-control" id="streamLink" value="{{ url }}">
             </div>
